@@ -3,10 +3,12 @@ DIST parrot-4.1.0.tar.bz2 4302808 RMD160 a0cf550967a37f2273212ed8b401b24ce70329e
 DIST parrot-4.2.0.tar.bz2 4309388 RMD160 7e93362932cee529e15a2158be55565d45c8e41d SHA1 f439bc06d566b8e7e5e4ec703101bc6bca4dd383 SHA256 a960c89f94099c9643c5623263bdb7fa9e97effb889c975382bbf9c0251186b4
 DIST parrot-4.3.0.tar.bz2 4322552 RMD160 6fabc852f2128d4d3919a6a7d1d73c7c18819c0e SHA1 da5d86180744fed7c7e020a535f413b4a7520fa7 SHA256 5c3f5ba2de06f6adb53b7835374a4f3e0601ec63e8a1d1dba6c6a07e12cc2990
 DIST parrot-4.4.0.tar.bz2 4324058 RMD160 8420b7d9e2e78a607a6224f6beefbad8f7e4cf32 SHA1 b815fa72a91d4d1e0ae5c830172f61d3e4a3a550 SHA256 348ce13fc136afc74a7b50b094f64d8cb00f83f0cd3d59acc6fa4e63c824fa4d
+DIST parrot-4.5.0.tar.bz2 4331710 RMD160 36365db8d899c717af158ff79700e5de00b08023 SHA1 0770c675972a65753b4cd9386fce4cace22a1997 SHA256 74996076eb9dbe0f2442e0ae9c0cb5c3e9d5f49a266368eee01f4ab30c6d2808
 EBUILD parrot-4.0.0.ebuild 2418 RMD160 3b0b0938a6686ac76ceadfeaea146e4189899635 SHA1 b2dd21df3325618312bbbf860175999abef30e66 SHA256 cbedff25fe294d4083864e2483755050f52fe5eaf266693048cd0562de527ad0
 EBUILD parrot-4.1.0.ebuild 2578 RMD160 ef8454e75a61440717d3e5f7d5b2b9a644f45054 SHA1 b9b087d3960e7662e32357f90b9e46d1ed1e7292 SHA256 4cfa6d727fb7f0297572b549d76551883c9df8b024c552e8f34e5174b32176c3
 EBUILD parrot-4.2.0.ebuild 2578 RMD160 312125732274a9871001faca156cfa7bd859e6d8 SHA1 3ee0c9b4455785e3c2b2e523d888674e14138f6a SHA256 8f5667ace5340178f27fdec472b9d677bbee8c04ad52ba1b2506628986c2692b
 EBUILD parrot-4.3.0.ebuild 2579 RMD160 73ab91c663a8f58529b99dd988d22c61189e4931 SHA1 05074fc835fe2040ce7df47cd4ee2c9448ac565f SHA256 fe0eb7471a70545c393be1f655bb55d08799ade00747daa6d62810c995ac95ac
 EBUILD parrot-4.4.0.ebuild 2578 RMD160 12e21414be8536bb4aa82d2ce846c3146db2d790 SHA1 2dae94917cf408990bddaaa717440aea83ac8008 SHA256 12cb9138f227400638d843ff01c0ef157085a1bd600002cb39e20ce69bce20e5
-MISC ChangeLog 7889 RMD160 faa3e226fa2075306de07bd60df1e6607377ea5a SHA1 d45bf9a08b1d77535542b25861adf9d79219e19b SHA256 7bff5af1c931d3b777ae3b96d3a2ee0d3c82d7af1c27ad83f51a856c27dba8c9
+EBUILD parrot-4.5.0.ebuild 2507 RMD160 fc30b7bad2d347e8c2b940490c1376ae38401ec1 SHA1 29c7a89387a5b29fb0f27a098af8083282ebe374 SHA256 d2b728ec55520d2b13a6edf8a513356cd9ea614661f238daa685e6ab588a23a5
+MISC ChangeLog 7998 RMD160 3fffa032115556cbf09ac1438a58788c3663159b SHA1 3cc3c3589e121caafd0db9f72928cbb00862da44 SHA256 a8a917190e08580a9537da4fdbd3e0d38477401e16c8ed4de56d6cc8b55f2aef
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
