@@ -5,13 +5,13 @@ EBUILD perl-DB_File-1.820.ebuild 636 RMD160 74a1174e1d12576de62b557e933e6ad50f77
 EBUILD perl-DB_File-1.821.ebuild 490 RMD160 050c74581ee128acb2cb6861600df2c5231ce962 SHA1 c51eaf6037f856274284cac0d103ac5f1f536cd9 SHA256 cf1c68a5c3faaed301310c9114a6b5bc7d25baef74cebed85f5274cec5d490e0
 EBUILD perl-DB_File-1.822.0.ebuild 492 RMD160 c1d030fd595cba927008f33811cadf6e039b3eff SHA1 990f31927181fd59cb6b8c5adef6d09692bfb069 SHA256 b242a7b3ba5199fb87be8f5fd5e1543db20f0c9d95ef047e02621d5367916e15
 EBUILD perl-DB_File-1.824.0.ebuild 482 RMD160 5afdc72a0ec1200b589a51c2d4f91a1edf08c94a SHA1 60f0b2d0680021bcdc20bb1cf748cf345ea5c64f SHA256 a29772e70b9da7b9ff44fbfca88c56d2c28939b0e93069f196987620bdc0fdd3
-EBUILD perl-DB_File-1.826.0-r1.ebuild 523 RMD160 801f3d1b08b26d3286cbae02583839beccc7e76e SHA1 e5cbb1937639f79fa58fc73f09ba8ba625befbd6 SHA256 985392a2a061f1ccf67000e4e535f8d6d09023f7f7d2dc91c932ae9e11a088b1
-MISC ChangeLog 6144 RMD160 8c2869fa5a4d2a0970ef5ea4b3ceb2bff55b3a41 SHA1 103103f87e0023b0a734e94c644403a92bc115f0 SHA256 99bd8e93120eadba28bc5f8d946efe63f9d172b7c28816b6c469ec35cd658468
+EBUILD perl-DB_File-1.826.0-r2.ebuild 539 RMD160 5ae3e051db19450fb279ead2d24b071f3745e6fd SHA1 2f8d0a9dc6d0840f230e900563aabb62c33d53b6 SHA256 f756eb2ecbac18ef8997c81144a4f58a2809c13b20a8e4a27c3cd43e59fcbff3
+MISC ChangeLog 6342 RMD160 1c393a21d3f87eca5461f24e4e6f870fe537adc4 SHA1 ff5d9bcd1b73a77327899165775e65080990200b SHA256 664c6e8d63a52dcaa2cd4136ad27a697febbf39a565498e0e69829eac065ca95
 MISC metadata.xml 159 RMD160 312f9ce05a5e6d5b2ae2dd53bf0371d80bb33a7f SHA1 ed741bf99f00660c2cfca56bcd1241336ad47fd7 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk+6LBgACgkQV3J2n04EauwJdgCdHPJEchXCbZcaRn5kahDZBtrQ
-6HcAniQVc0QDgh9zca35CyPMOPdmtWlV
-=J27t
+iEYEAREIAAYFAk/gzwMACgkQV3J2n04EauzNQQCg3XsiWgtrf0u+eKGoaamiMYrY
+eD0AnjnilSPh8vH7fpRsscnDCsjMlnit
+=xKaY
 -----END PGP SIGNATURE-----
