@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-DB_File
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-DB_File/ChangeLog,v 1.48 2012/05/21 11:50:36 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-DB_File/ChangeLog,v 1.49 2012/06/19 19:11:58 tove Exp $
+
+*perl-DB_File-1.826.0-r2 (19 Jun 2012)
+
+  19 Jun 2012; Torsten Veller <tove@gentoo.org>
+  -perl-DB_File-1.826.0-r1.ebuild, +perl-DB_File-1.826.0-r2.ebuild:
+  Depend on perl[berkdb] again (#421977)
 
 *perl-DB_File-1.826.0-r1 (21 May 2012)
 
