@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/parrot
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.54 2012/05/18 02:12:11 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.55 2012/06/20 08:10:20 patrick Exp $
+
+*parrot-4.5.0 (20 Jun 2012)
+
+  20 Jun 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.5.0.ebuild:
+  Bump
 
 *parrot-4.4.0 (18 May 2012)
 
